background image main section problem

--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
    </header>
 
     <!--Main Section-->
-<section>
+<section class="mainContainer">
+
+    <div class="section1">
+      <div class="flowerTea">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair trade, Organic Tea</h4>
+      </div> <!-- .flowerTea div closes-->
+
+    </div> <!--section1 div closes-->
+
+<!--Section 2 Tea of the month-->
+
+    <div class="section2">
+
+    </div> <!--section2 div closes-->
+
+<!--Section 3 Locations-->
+
+    <div class="section3">
+
+    </div> <!--section3 div closes-->
 
 </section>
 
