--- a/index.html
+++ b/index.html
@@ -31,12 +31,43 @@
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair trade, Organic Tea</h4>
       </div> <!-- .flowerTea div closes-->
-
     </div> <!--section1 div closes-->
 
 <!--Section 2 Tea of the month-->
 
     <div class="section2">
+
+      <h2>Tea of the Month</h2>
+      <h4>What's steeping at The Tea Cozy?</h4>
+
+      <div class="horizontal-align">
+
+        <div class="berryTea">
+          <img src="./images/berryTea.jpg">
+          <h4>Full Berry Blitz Tea</h4>
+        </div> <!--berryTea div closes-->
+
+        <div class="rumTea">
+            <img src="./images/rumTea.jpg">
+            <h4>Spiced Rum Tea</h4>
+        </div> <!--rumTea div closes-->
+
+        <div class="donut">
+          <img src="./images/donut.jpg">
+          <h4>Seasonal Donuts</h4>
+        </div> <!--donut div closes-->
+
+        <div class="donut">
+          <img src="./images/donut.jpg">
+          <h4>Myrtle Ave Tea</h4>
+        </div> <!--donut div closes-->
+
+        <div class="./images/bedfordTea.jpg">
+          <img src="./images/bedfordTea.jpg">
+          <h4>Bedford Bizarre Tea</h4>
+        </div> <!--bedfordTea div closes-->
+
+      </div> <!--horizontal-align div closes-->
 
     </div> <!--section2 div closes-->
 
