navigation bar fixed issues

--- a/index.html
+++ b/index.html
@@ -40,35 +40,34 @@
       <h2>Tea of the Month</h2>
       <h4>What's steeping at The Tea Cozy?</h4>
 
-      <div class="horizontal-align">
+      <div class="wrap">
 
-        <div class="berryTea">
-          <img src="./images/berryTea.jpg">
+        <div class="box">
+          <img src="./resources/images/berryTea.jpg">
           <h4>Full Berry Blitz Tea</h4>
-        </div> <!--berryTea div closes-->
+        </div> <!--box div closes-->
 
-        <div class="rumTea">
-            <img src="./images/rumTea.jpg">
+        <div class="box">
+            <img src="./resources/images/rumTea.jpg">
             <h4>Spiced Rum Tea</h4>
-        </div> <!--rumTea div closes-->
+        </div> <!--box div closes-->
 
-        <div class="donut">
-          <img src="./images/donut.jpg">
+        <div class="box">
+          <img src="./resources/images/donut.jpg">
           <h4>Seasonal Donuts</h4>
-        </div> <!--donut div closes-->
+        </div> <!--box div closes-->
 
-        <div class="donut">
-          <img src="./images/donut.jpg">
+        <div class="box">
+          <img src="./resources/images/donut.jpg">
           <h4>Myrtle Ave Tea</h4>
-        </div> <!--donut div closes-->
+        </div> <!--box div closes-->
 
-        <div class="./images/bedfordTea.jpg">
-          <img src="./images/bedfordTea.jpg">
+        <div class="box">
+          <img src="./resources/images/bedfordTea.jpg">
           <h4>Bedford Bizarre Tea</h4>
-        </div> <!--bedfordTea div closes-->
+        </div> <!--box div closes-->
 
-      </div> <!--horizontal-align div closes-->
-
+      </div> <!--wrap div closes-->
     </div> <!--section2 div closes-->
 
 <!--Section 3 Locations-->
