boxes in background image issue

--- a/index.html
+++ b/index.html
@@ -37,35 +37,35 @@
 
     <div class="section2">
 
-      <h2>Tea of the Month</h2>
-      <h4>What's steeping at The Tea Cozy?</h4>
+        <h2>Tea of the Month</h2>
+        <h4>What's steeping at The Tea Cozy?</h4>
 
       <div class="wrap">
 
-        <div class="box">
+        <div>
           <img src="./resources/images/berryTea.jpg">
           <h4>Full Berry Blitz Tea</h4>
-        </div> <!--box div closes-->
+        </div>
 
-        <div class="box">
+        <div>
             <img src="./resources/images/rumTea.jpg">
             <h4>Spiced Rum Tea</h4>
-        </div> <!--box div closes-->
+        </div>
 
-        <div class="box">
+        <div>
           <img src="./resources/images/donut.jpg">
           <h4>Seasonal Donuts</h4>
-        </div> <!--box div closes-->
+        </div>
 
-        <div class="box">
-          <img src="./resources/images/donut.jpg">
+        <div>
+          <img src="./resources/images/mintTea.jpg">
           <h4>Myrtle Ave Tea</h4>
-        </div> <!--box div closes-->
+        </div>
 
-        <div class="box">
+        <div>
           <img src="./resources/images/bedfordTea.jpg">
           <h4>Bedford Bizarre Tea</h4>
-        </div> <!--box div closes-->
+        </div>
 
       </div> <!--wrap div closes-->
     </div> <!--section2 div closes-->
@@ -73,8 +73,28 @@
 <!--Section 3 Locations-->
 
     <div class="section3">
+      <h2>Locations</h2>
 
-    </div> <!--section3 div closes-->
+    <div class="location-container">
+
+      <div class="box">
+        <h4>Downtown</h4>
+        <p>384 West 4th Street <br> Suite 108 <br> Portland, Maine</p>
+      </div> <!--box div closes-->
+
+      <div class="box">
+          <h4>East Bayside</h4>
+          <p>384 Phisherman's Avenue <br> (Northwest Corner) <br> Portland, Maine</p>
+      </div> <!--box div closes-->
+
+      <div class="box">
+        <h4>Oakdale</h4>
+        <p>515 Crescent Avenue <br> Second Floor <br> Portland, Maine</p>
+      </div> <!--box div closes-->
+
+    </div> <!--location-container div closes-->
+
+  </div> <!--section3 div closes-->
 
 </section>
 
