--- a/index.html
+++ b/index.html
@@ -73,30 +73,50 @@
 <!--Section 3 Locations-->
 
     <div class="section3">
-      <h2>Locations</h2>
+
+      <div class="location-heading">
+        <h2>Locations</h2>
+      </div>
 
     <div class="location-container">
 
       <div class="box">
         <h4>Downtown</h4>
-        <p>384 West 4th Street <br> Suite 108 <br> Portland, Maine</p>
+        <p>5 West Corner</p>
+        <p>Suite 8</p>
+        <p>Portland, Maine</p>
       </div> <!--box div closes-->
 
       <div class="box">
           <h4>East Bayside</h4>
-          <p>384 Phisherman's Avenue <br> (Northwest Corner) <br> Portland, Maine</p>
+          <p>384 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
       </div> <!--box div closes-->
 
       <div class="box">
         <h4>Oakdale</h4>
-        <p>515 Crescent Avenue <br> Second Floor <br> Portland, Maine</p>
+        <p>3 Cresent Avenue</p>
+        <p>Second floor</p>
+        <p>Portland, Maine</p>
       </div> <!--box div closes-->
 
-    </div> <!--location-container div closes-->
+      </div> <!--location-container div closes-->
 
-  </div> <!--section3 div closes-->
+    </div> <!--section3 div closes-->
 
-</section>
+  </section>
+
+  <footer>
+    <h2>The Tea Cozy</h2>
+    <h5>contact@theteacozy.com</h5>
+    <h5>917-555-8904</h5>
+
+    <div class="copyright">
+      <h5>copyright The Tea Cozy 2017</h5>
+    </div> <!--copyright div closes-->
+
+  </footer>
 
   </body>
 </html>
